--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,5 +1,5 @@
 {
-    "githubUsername": "GitHub-iccfoo",
+    "githubUsername": "iccfoo",
     "blogTitle": "iccfoo",
     "blogDescribe": "欢迎来到iccfoo的个人博客。",
     "htmlTitle": "iccfoo的博客",
